# M4

./: .coveralls.yml  .gitignore  .travis.yml  How_to_use_it.md  How_to_use_it.txt  Installation Guide.md  MANIFEST.in  README.md  m4-workspace.code-workspace  pyproject.toml  requirements.txt  setup.py
__init_scripts__/: initAnalysis.py  initOTT.py  pyott.py
docs/: analyzers.rst  conf.py  configuration.rst  devices.rst  ground.rst  index.rst  m4.rst  mOTT.rst  ott_sim.rst  requirements.txt  type.rst  utils.rst
docs/source/: m4.ground.rst  (+4 more)
githubWorkflows/: pythonpackage.yml
m4/: .travis.yml  20233011_noiseAnalysis_Luca_part2.py  SPL_controller.py  __init__.py  _ottiff.py  _sandbox.py  alignment.py  allDevices.py  analysis_imports.py  analyzerIFF.py  analyzerIFFunctions.py  analyzer_iffunctions.py  basic.py  caliball_average.py  constLocations.py  deformableMirror.py  flat.py  flattening.py  howto_ESO.py  howto_OTT.py  howto_OTT2.py  influenceFunctions.py  influenceFunctionsMaker.py  influence_functions_maker.py  initAnalysis.py  initOTT.py  main.py  main_ottProcedure.py  noise.py  noise_functions.py  opticalAlignment.py  opticalCalibration.py  ottMeasure.py  ott_calibrator_and_aligner.py  ottiff.py  pist_iff_processing.py  pointer_align.py  pointer_aligner.py  requirements_checker.py  sandbox.py  (+7 more)
script/: Script.py  ScriptActuatorPositions.py
scripts/: 20233011_noiseAnalysis_Luca_part2.py  osutils.py  spiralize.py  zmq_busbox_debug.py
test/: create_ott_test.py  helper_test_library.py  test_calibration.py  test_helper.py
utils/: test_parabolaIdentification.py
(+433 files in other folders)
